# video-stream-consistency

./: .gitignore  CMakeLists.txt  README.md  config.json  configs.txt  explanation_of_hyperparameters.txt  frametovid.py  multi_inference_run.py  run.py  vidtoframe.py
cmake/: Findonnxruntime.cmake  windeployqt.cmake
model-conversion/: README.md  convert_onnx.py  flowvis.py  modelrunner.py  test.py
model-conversion/pwc_pytorch/: README.md  model_spec.py  pwcnet.py
model-conversion/pwc_pytorch/checkpoints/: download_models.txt
models/: flowvis.onnx
src/: Readme.md
src/decoding/: circular_buffer.h  demuxer.cpp  demuxer.h  encoder.cpp  encoder.h  ffmpeg.cpp  ffmpeg.h  format_converter.cpp  format_converter.h  queue.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h  twostream_decoder.cpp  twostream_decoder.h  video_control.h  video_decoder.cpp  video_decoder.h  video_filterer.cpp  video_filterer.h
src/gui/: hyperparameterwidget.cpp  hyperparameterwidget.h  main.cpp  videoopenwidget.cpp  videoopenwidget.h  videoplayer.cpp  videoplayer.h  videowidget.cpp  videowidget.h  videowidgetsurface.cpp  videowidgetsurface.h  waiting_spinner.cpp  waiting_spinner.h
src/inference/: CpuIO.cpp  CpuIO.h  CudaIO.cpp  CudaIO.h  IOInterface.h  ImageArrayIOHelper.cpp  ImageArrayIOHelper.h  InferenceModelVariant.cpp  InferenceModelVariant.h  MemoryType.h  OrtContext.cpp  OrtContext.h
src/ort_custom_ops/: CMakeLists.txt
src/ort_custom_ops/include/ort_custom_ops/: basekernel.h  custom_ops.h
src/ort_custom_ops/include/ort_custom_ops/opticalflow/: correlation.h  warp.h
src/ort_custom_ops/src/: custom_ops.cpp
src/ort_custom_ops/src/opticalflow/: correlation.cc  correlation_cuda.cc  correlation_cuda.cu  warp.cc  warp_cuda.cc  warp_cuda.cu
src/stabilization/: flowIO.cpp  flowIO.h  flowconsistency.cu  flowconsistency.cuh  flowmodel.cpp  flowmodel.h  gpuimage.cpp  gpuimage.cu  gpuimage.h  gpuimagewrapper.h  imagehelpers.cpp  imagehelpers.h  main.cpp  stabilizefiles.cpp  stabilizefiles.h  stabilizestream.cpp  stabilizestream.h  videostabilizer.cpp  videostabilizer.h
